Fixed spacing on projects pages.

--- a/public/styles/global.css
+++ b/public/styles/global.css
@@ -27,6 +27,10 @@
   z-index: 1;
 }
 
+.aspect-photo {
+  aspect-ratio: 2;
+}
+
 #gift-grid {
   grid-gap: 2rem;
 }
